# middleware

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.devcontainer/java17/: devcontainer.json
.devcontainer/java21/: devcontainer.json
azure-container-app/: Cargo.toml  check-aca-health.sh  default.nix  flake.nix
azure-container-app/src/: main.rs
clients/: justfile
clients/base/db-sender/: pom.xml
clients/deployment/: .terraform.lock.hcl  README.md  azure-container-apps.tf  azure-container-instances.tf  check-aca-health.sh  finnplay.tfvars  gig.just  gig.tfvars  greenfeather.tfvars  justfile  leovegas.just  leovegas.tfvars  main.tf  marsbet.just  marsbet.tfvars  outputs.tf  playbook.tfvars  sbotop.tfvars  soft2bet.just  soft2bet.tfvars  softmaya.tfvars  variables.tf  winner-studio.tfvars
clients/finnplay/: terraform.tfvars
clients/finnplay/finnplay-db-sender/: justfile  pom.xml
clients/finnplay/finnplay-db-to-kafka/: docker-compose.yml  pom.xml
clients/finnplay/finnplay-stream/: create-topics.sh  justfile  pom.xml
clients/gig/: terraform.tfvars
clients/greenfeather/: terraform.tfvars
clients/marsbet/: terraform.tfvars
clients/monitoring/: Justfile  global.tfvars  main.tf  variables.tf
clients/playbook/: terraform.tfvars
clients/sbotop/: terraform.tfvars
clients/winner-studio/: terraform.tfvars
common/common-logback/: pom.xml
common/referentials/: pom.xml
kafka-mirror/: README.md  build.gradle.kts  docker-compose.yml  gradle.properties  settings.gradle.kts
poc-aws-flink/: build.gradle.kts  settings.gradle.kts
(+483 files in other folders)
