[package]
name = "aca-health-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
azure_identity = "0.26"
azure_core = "0.26"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"
colored = "2.0"